# haskell-synth

./: .gitignore  Makefile  README.md  build  fp-project.cabal  outout.hs  run-demo-01.sh  run-demo-02.sh  run-demo-03.sh  run-demo-04.sh  run-live.sh
data/: bicycle.mid.decoded  bicycle.mid.json  instrument.json  kimono-girls.mid.decoded  kimono-girls.mid.json  midi2score.js  pokemon-bycicle.csv  pokemon-bycicle.midi-signals  pokemon-credits.mid.decoded  pokemon-credits.mid.json  pokemon.json  score.json  simpsons.mid.decoded  simpsons.mid.json
data/demos/: 01-attack.json  02-decay+release.json  03-pitch.json  04-all.json
resources/: qwertz-layout.blend
src/: AppMode.hs  AppSettings.hs  Effects.hs  FileHandler.hs  Filehandler.hs  Instrument.hs  Key.hs  Live.hs  Main.hs  MidiConverter.hs  Oscilators.hs  Output.hs  Playback.hs  Render.hs  Score.hs  Utils.hs
src/oscilators/: NoiseOsc.hs  Oscilator.hs  SawOsc.hs  SineOsc.hs  SquareOsc.hs  TriangleOsc.hs  WavetableOsc.hs
tests/: Main.hs
