name:                fp-project
version:             0.1.0.0
author:              Oliver Habersetzer
                   , Arthur Push
                   , Sven Reiter
                   , Pascal Hoppe
maintainer:          oliver.habersetzer@mni.thm.de
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=2

executable fp-project
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13
                     , cmdargs
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       AppMode

test-suite test
  type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  Build-Depends:    base >= 4.12 && <4.13
                  , HUnit
  default-language: Haskell2010
  hs-source-dirs:   tests