name:                fp-project
version:             0.1.0.0
author:              Oliver Habersetzer
                   , Arthur Push
                   , Sven Reiter
                   , Pascal Hoppe
maintainer:          oliver.habersetzer@mni.thm.de
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=2

executable fp-project
  main-is:             Main.hs
  build-depends:       base
                     , cmdargs
                     , aeson
                     , bytestring
                     , random
                     , split
                     , binary
                     , glib
                     , gtk2hs-buildtools
                     , gtk
                     , midi
                     , event-list
                     , directory
                     , proteaaudio
                     , filepath
  default-language:    Haskell2010
  hs-source-dirs:      src
                     , src/oscilators
  other-modules:       AppSettings
                     , Instrument
                     , Score
                     , Key
                     , Oscilators
                     , Render
                     , Effects
                     , Live
                     , Utils
                     , MidiConverter
                     , Playback

test-suite test
  type:             exitcode-stdio-1.0
  Main-is:          Main.hs
  Build-Depends:    base
                  , HUnit
  default-language: Haskell2010
  hs-source-dirs:   tests
